# UQ-AVInpaint

./: .gitignore  Config.py  NUL  Options_inpainting.py  README.md  UQ_AVInpaint_implementation_plan.md  VIAI.pdf:Zone.Identifier  base_options.py  expmanu.md  loss_functions.py  main.py  metric.md  plan.md  pyproject.toml  resolve.md  save_tensorboard_images.py  test_mel_autoencoder.py  test_output.txt  test_uq_av.py  test_viai_a.py  test_viai_av.py  test_whole_sync.py  train_mel_autoencoder.py  train_uq_av.py  train_viai_a.py  train_viai_av.py  train_vocoder.py  train_whole_sync.py  uq-viva.md
.claude/: scheduled_tasks.json  settings.local.json.save
Data_loaders/: AV_loader.py  Image_preprocess.py  __init__.py  audio_loader.py  mask_sampler.py  mel_loader.py  uq_av_loader.py  viai_a_loader.py  visual_degradation.py
Models/: Mel_Autoencoder.py  UQ_AV_Diffusion.py  VIAI_AV_inpainting.py  VIAI_A_inpainting.py  Whole_Sync_inpainting_modify.py  __init__.py
docs/: Stage6_Stage7c_Stage7d Ablation.md  abstract_conclusion.md  architecture_diagram.md  baseline_reference.md  discussion_limitation.md  essay_advice.md  exp.md  exp_res_ana.md  expfulltrain.md  intro.md  methods.md  paper_draft.md  related_work.md  stage10d_final_tables.md  stage8res.md
logmd/: DATADOWNLOAD.md  MODIFICATION_LOG.md  experiment.md  information.md
networks/: EC_VIAI_Modules.py  Image_Embedding.py  New_Inpainting_Networks.py
plan_details/: eighth.md  eighthB.md  fifth.md  forth.md  hifi_gan.md  ninth.md  ninthB.md  second.md  seventh.md  seventhB.md  seventhC.md  seventhD.md  sixth.md  test.md  (+7 more)
(+103 files in other folders)
