[project]
name = "vision-infused-audio-inpainter-viai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio-ffmpeg",
    "librosa",
    "nnmnkwii",
    "numpy",
    "opencv-contrib-python",
    "pillow",
    "scikit-image",
    "tensorboard",
    "tensorboardX",
    "tqdm",
    "yt-dlp[default]",
]

[project.optional-dependencies]
local-cuda = [
    "torch",
]
